--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,14 +67,13 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
-  margin-top: 20px;
 }
 
 .section-title {
   font-size: 16px;
-  margin: 10px 0;
   font-weight: 700;
   color: var(--accent);
+  padding-left: 2px;
 }
 
 .list {
@@ -92,12 +91,12 @@ h1 {
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.05);
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.4;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 46px;
+  height: 50px;
   position: relative;
 }
 .option:hover {
@@ -267,11 +266,12 @@ h1 {
 
 .type-select {
   display: flex;
-  gap: 8px;
+  padding-top: 4px;
+  gap: 10px;
   flex-wrap: wrap;
 }
 .type-btn {
-  padding-bottom: 4px;
+  padding-bottom: 6px;
   width: 76px;
   height: 36px;
   display: flex;
